--- a/LoginFB/android/app/src/main/res/values/strings.xml
+++ b/LoginFB/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoginFB</string>
+    <string name="facebook_app_id">1014738902409985</string>
 </resources>
